fixed overlapping planets

--- a/css/style.css
+++ b/css/style.css
@@ -801,13 +801,13 @@ footer p {
 
 	#earthContainer15 {
 		width:13%;
-		top:65%;
-		left:26%;
+		top:68%;
+		left:6%;
 	}
 
 	#earthContainer16 {
 		width:10%;
-		top:38%;
+		top:28%;
 		left:30%;
 	}
 
